# mini-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  agent_loop.py  config.example.yaml  config.yaml  config_loader.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  skill_loader.py  test_skill.py  webui.py
agent/: __init__.py  agent_loop.py  config_loader.py  file_manager.py  skill_loader.py  skill_manager.py
agent/tools/: __init__.py  builtin.py  skill_tools.py
prompt/: system.md  user.md
skills/weather/: SKILL.md  tools.py
skills/weather/references/: usage.md
test/: __init__.py  test_multi_skills_dir.py  test_skill_manager.py  test_stop_feature.py
web/: app.js  index.html  style.css
