[project]
name = "mini-agent"
version = "0.1.0"
description = "一个最小的 Agent Loop 实现，使用 OpenAI SDK 调用兼容 API"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.setuptools]
# agent/ 为核心包（含子包 agent/tools/）；main.py / webui.py 为顶层入口脚本
packages = ["agent", "agent.tools"]
py-modules = ["main", "webui"]